--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "start": "concurrently yarn:start:*"
   },
   "devDependencies": {
+    "@types/express": "^4.17.2",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.20.9"
   }
 }
