--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "knex": "^0.20.9"
+    "knex": "^0.20.9",
+    "winston": "^3.2.1"
   }
 }
