--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/ioredis": "^4.14.7",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   },
@@ -18,7 +19,10 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ioredis": "^4.14.1",
     "knex": "^0.20.9",
-    "winston": "^3.2.1"
+    "pg": "^7.18.1",
+    "winston": "^3.2.1",
+    "xstate": "^4.7.8"
   }
 }
