--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start:build": "tsc -w",
-    "start:run": "nodemon build/index.js",
-    "start": "concurrently yarn:start:*"
+    "build": "tsc && node build/index.js",
+    "watch": "nodemon -e ts --exec \" yarn run build\""
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
