--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/ioredis": "^4.14.7",
+    "@types/yup": "^0.26.31",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   },
@@ -22,6 +23,7 @@
     "knex": "^0.20.9",
     "pg": "^7.18.1",
     "winston": "^3.2.1",
-    "xstate": "^4.7.8"
+    "xstate": "^4.7.8",
+    "yup": "^0.28.1"
   }
 }
