--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/express-jwt": "^0.0.42",
     "@types/ioredis": "^4.14.7",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/yup": "^0.26.31",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
@@ -20,7 +22,9 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "ioredis": "^4.14.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.9",
     "pg": "^7.18.1",
     "winston": "^3.2.1",
