--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-telegram-login": "^1.0.4",
     "typescript": "~3.7.2"
