--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3030",
   "dependencies": {
     "@material-ui/core": "^4.9.3",
+    "@material-ui/lab": "^4.0.0-alpha.44",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
