--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-query": "^0.4.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-telegram-login": "^1.0.4",
