telegram callback query parsing bug fix

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ PORT=3030
 DATABASE_URL='postgresql://<pguser>:<pgpassword>@<pghost>:<pgport>/<db-name>'
 APP_ROOT_URL='http://localhost:3030'
 TELEGRAM_BOT_TOKEN='<telegram-bot-token>'
+GC_PROJECT_ID='<google-cloud-project-id>'
+GC_SERVICE_KEY_FILE_NAME='<google-cloud-service-key-json-file-name>'
+GCS_BUCKET_NAME='<google-cloud-storage-bucket-name>'
+JWT_SECRET='<jwt-secret>'
+TELEGRAM_CHANNEL_USERNAME='<telegram-channel-username>'
